# litegen

./: .env.exmaple  .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  biome.json  pyproject.toml
containers/: Dockerfile  docker-compose.infra.yaml  docker-compose.prod.yaml  entrypoint.sh
containers/nginx/: Dockerfile
containers/nginx/conf.d/: app.conf
migrations/versions/: 2025-09-29_add_url_filters_9a2c0facbdad.py  2025-09-29_init_dbf3b7f79917.py
src/backend/: config.py  main.py  models.py  settings.py
src/backend/controllers/: __init__.py  crawl.py  frontend.py
src/backend/lib/: crawl.py  dependencies.py  services.py  utils.py
src/backend/schema/: crawl.py
src/frontend/: openapi.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/frontend/client/: sdk.gen.ts  types.gen.ts
src/frontend/src/: index.css  main.tsx  routeTree.gen.ts
src/frontend/src/components/: crawl-form.tsx  crawl-list.tsx  navbar.tsx  theme-context.tsx
src/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  navigation-menu.tsx  progress.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  table.tsx  tooltip.tsx
src/frontend/src/routes/: __root.tsx  _app.tsx  index.tsx
src/frontend/src/routes/_app/: about.tsx  dashboard.tsx
